<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/about_details"
        android:layout_width="308dp"
        android:layout_height="132dp"
        android:layout_below="@id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dip"
        android:layout_marginRight="16dip"
        android:text="@string/About_text" />

    <TextView
        android:id="@+id/about_info"
        android:layout_width="309dp"
        android:layout_height="130dp"
        android:layout_above="@id/about_details"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="-270dp"
        android:text="@string/About_info" />

    <TextView
        android:id="@+id/about_main_link"
        android:layout_width="312dp"
        android:layout_height="71dp"
        android:layout_above="@id/about_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-165dp"
        android:text="@string/about_link"
         />

    <Button
        android:id="@+id/returnbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_details"
        android:layout_marginBottom="-380dp"
        android:background="#FF9800"
        android:text="RETURN TO BMI CALCULATOR" />
</RelativeLayout>
